# fast_search_in_box

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  basic_usage.cpp  performance_example.cpp
include/: grid_index.h
tests/: CMakeLists.txt  test_grid_index.cpp
